--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TestApp.Core.Lib\TestApp.Core.Lib.csproj" />
     <ProjectReference Include="..\TestApp.Lib\TestApp.Lib.csproj" />
   </ItemGroup>
 
